[gd_scene load_steps=5 format=2]

[ext_resource path="res://Book/BookPair.gd" type="Script" id=1]
[ext_resource path="res://Book/MortarPage.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Stations/station_book.png" type="Texture" id=3]
[ext_resource path="res://Book/CombinatorPage.tscn" type="PackedScene" id=6]

[node name="BookPair" type="Node2D"]
script = ExtResource( 1 )

[node name="CombinatorPageLeft" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 0, 0 )

[node name="CombinatorPageRight" parent="." instance=ExtResource( 6 )]
visible = false

[node name="MortarPageLeft" parent="." instance=ExtResource( 2 )]

[node name="MortarPageRight" parent="." instance=ExtResource( 2 )]
position = Vector2( 688, 0 )

[node name="BookSprite" type="Sprite" parent="."]
position = Vector2( 342, 320 )
scale = Vector2( 25.5101, 17.2174 )
z_index = -1
texture = ExtResource( 3 )
centered = false
offset = Vector2( -15.2923, -25.4637 )
